Fixing style of widget on mobile

--- a/src/styles/theme/components/_widget-card.scss
+++ b/src/styles/theme/components/_widget-card.scss
@@ -4,7 +4,7 @@
   margin-bottom: 2rem;
   border: 1px solid $navy-dark;
   background-color: #1e1e1e;
-  padding: 1rem;
+  padding: 1rem 0.75rem;
   border-radius: $border-radius;
 
   &__header {
@@ -27,6 +27,7 @@
     border-bottom: 1px solid $navy-dark;
     padding-bottom: 1rem;
     margin-bottom: 1rem;
+    flex-wrap: wrap;
 
     &:last-child {
       padding-bottom: 0;
@@ -35,10 +36,22 @@
     }
 
     &__thumbnail {
-      width: 100px;
+      width: 70px;
       height: auto;
       object-fit: cover;
       border-radius: $border-radius;
+
+      @media (max-width: $bp-md) {
+        width: 100%;
+        margin: 0;
+        margin-bottom: 0.5rem;
+      }
+
+      @media (min-width: $bp-lg) {
+        width: 100px;
+        margin: 0;
+        margin-right: 1rem;
+      }
     }
 
     &__title {
@@ -49,6 +62,7 @@
       font-size: 0.9rem;
       font-weight: bold;
       color: $light-color-3;
+      margin-bottom: 0;
     }
   }
 }
